--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,9 @@ repositories {
 }
 
 dependencies {
+    testCompile(
+            'org.junit.jupiter:junit-jupiter-engine:5.1.0',
+            'org.codehaus.groovy:groovy-all:2.5.7',
+            'org.spockframework:spock-core:1.3-groovy-2.5'
+    )
 }
